--- a/项目说明书/项目说明书.md
+++ b/项目说明书/项目说明书.md
@@ -1,4 +1,4 @@
-# 1）项目设计部分：
+# 1）项目设计部分：项目名：FinalSystem
 
 ## （1）项目总体构成；
 
@@ -278,5 +278,6 @@ prolistuser.html：用户商品列表页面
 新增一项对话框功能：在用户注册时，如果用户名与管理员相撞，随即会跳出“请重新定义您的用户名”的对话框，下一步将不能进行。目的是提醒用户注册时不要误入，防止用户与管理员混淆。
 
 
+第四天，由于最开始部署时把项目设置成private，不是public 所以git传输错误，今早重新部署，成功运行。
 
 至此该程序终于全部修改完毕。
